--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
         "node": ">=22"
     },
     "dependencies": {
+        "node-pre-gyp": "^0.17.0",
         "opusscript": "^0.1.1",
+        "rebuild": "^0.1.2",
         "typescript": "5.6.3"
     }
 }
